deployment/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    app: be-selector
  name: be-selector
  namespace: components-selector
spec:
  selector:
    matchLabels:
      app: be-selector
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: be-selector
    spec:
      serviceAccount: configmap-reader
      serviceAccountName: configmap-reader
      containers:
      - image: bogmilos/be-components-selector:2.1.5
        imagePullPolicy: IfNotPresent
        name: be-components-selector
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
      - image: bogmilos/fluid-properties:2.0.5
        imagePullPolicy: IfNotPresent
        name: be-fluid-properties
        ports:
          - containerPort: 5000
            protocol: TCP
        resources: {}
      restartPolicy: Always
