deployment/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: be-selector
  name: be-selector
  namespace: components-selector
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: be-selector
  type: NodePort
status:
  loadBalancer: {}
