deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend
  namespace: components-selector
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
#    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/foo"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: "/foo(/|$)(.*)"
          pathType: Prefix
          backend:
            service:
              name: be-selector
              port:
                number: 80
